--- a/Project.toml
+++ b/Project.toml
@@ -58,9 +58,9 @@ GPUifyLoops = "0.2"
 GaussQuadrature = "0.5"
 JLD2 = "0.1"
 KernelAbstractions = "0.2"
-LazyArrays = "0.15, 0.16"
+LazyArrays = "0.15"
 Literate = "2.2"
-MPI = "0.12, 0.13"
+MPI = "0.12"
 NCDatasets = "0.10"
 OrderedCollections = "1.1"
 Requires = "1.0"
