--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,6 +100,8 @@ jobs:
     matrix:
       Julia 1.3:
         JULIA_VERSION: '1.3'
+        
+  continueOnError: true
 
   steps:
   - powershell: |
