--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -7,6 +7,10 @@ cpu = [
   { file = "test/DGmethods/advection_diffusion/pseudo1D_advection_diffusion_1dimex.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/advection_diffusion/pseudo1D_heat_eqn.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/DGmethods/advection_diffusion/periodic_3D_hyperdiffusion.jl", slurmargs = ["--ntasks=3"], args = [] },
+  { file = "test/Mesh/mpi_connect_1d.jl", slurmargs = ["--ntasks=5"], args = [] },
+  { file = "test/Mesh/mpi_connect_sphere.jl", slurmargs = ["--ntasks=5"], args = [] },
+  { file = "test/Mesh/mpi_getpartition.jl", slurmargs = ["--ntasks=5"], args = [] },
+  { file = "test/Mesh/mpi_sortcolumns.jl", slurmargs = ["--ntasks=4"], args = [] },
   { file = "test/ODESolvers/ode_tests_convergence.jl", slurmargs = ["--ntasks=1"], args = [] },
   { file = "examples/Microphysics/ex_1_saturation_adjustment.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "examples/Microphysics/ex_2_Kessler.jl", slurmargs = ["--ntasks=3"], args = [] },
