--- a/Project.toml
+++ b/Project.toml
@@ -62,7 +62,7 @@ Literate = "2.2"
 MPI = "0.12, 0.13"
 NCDatasets = "0.10"
 OrderedCollections = "1.1"
-RootSolvers = "0.1"
+RootSolvers = "0.1, 0.2"
 SpecialFunctions = "0.10"
 StaticArrays = "0.12"
 WriteVTK = "1.4"
