--- a/bors.toml
+++ b/bors.toml
@@ -1,7 +1,7 @@
 status = [
-  "CLIMA",
-  "docs-build",
-  "ci/slurmci"
+  "azure-ci",
+  "ci/slurmci",
+  "docs-build"
 ]
 delete_merged_branches = true
 timeout_sec = 86400
