--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,6 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-GPUifyLoops = "ba82f77b-6841-5d2e-bd9f-4daf811aec27"
 GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
@@ -47,19 +46,18 @@ CUDAdrv = "6.0"
 CUDAnative = "2.10, 3.0"
 Combinatorics = "1.0"
 Coverage = "1.0"
-CuArrays = "1.7, 2.1"
+CuArrays = "1.7"
 Distributions = "0.22, 0.23"
 DocStringExtensions = "0.8"
 DoubleFloats = "1.1"
 FileIO = "1.2"
 ForwardDiff = "0.10"
-GPUifyLoops = "0.2"
 GaussQuadrature = "0.5"
 JLD2 = "0.1"
 KernelAbstractions = "0.2.2"
 LazyArrays = "0.15, 0.16"
 Literate = "2.2"
-MPI = "0.12, 0.13"
+MPI = "0.12, 0.13, 0.14"
 NCDatasets = "0.10"
 OrderedCollections = "1.1"
 RootSolvers = "0.1, 0.2"
