--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
@@ -44,7 +45,7 @@ WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 [compat]
 Adapt = "1.0"
 ArgParse = "1.1"
-CLIMAParameters = "= 0.1.4"
+CLIMAParameters = "= 0.1.6"
 CUDAapi = "3.1, 4.0"
 CUDAdrv = "6.0"
 CUDAnative = "2.10, 3.0"
