chjeckout sm/taylor-green-vortex

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ CUDAnative = "be33ccc6-a3ff-5ff2-a52e-74243cff1e17"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 CuArrays = "3a865a2d-5b23-5a0f-bc46-62713ec82fae"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
