--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,11 +94,11 @@ jobs:
     displayName: 'Download and extract Julia'
   - powershell: |
       Set-PSDebug -Trace 1
-      C:\julia-$(JULIA_VERSION)\bin\julia.exe -e 'using InteractiveUtils; versioninfo()'
-      C:\julia-$(JULIA_VERSION)\bin\julia.exe --project=@. -e 'using Pkg; Pkg.instantiate()'
-      C:\julia-$(JULIA_VERSION)\bin\julia.exe --project=@. -e 'using Pkg; Pkg.test()'
+      C:\julia-$(JULIA_VERSION)\bin\julia.exe -e "using InteractiveUtils; versioninfo()"
+      C:\julia-$(JULIA_VERSION)\bin\julia.exe --project=@. -e "using Pkg; Pkg.instantiate()"
+      C:\julia-$(JULIA_VERSION)\bin\julia.exe --project=@. -e "using Pkg; Pkg.test()"
     displayName: 'Run the tests'
   - powershell: |
       Set-PSDebug -Trace 1
-      C:\julia-$(JULIA_VERSION)\bin\julia.exe -e 'include(joinpath(".dev", "systemimage", "climate_machine_image.jl"))'
+      C:\julia-$(JULIA_VERSION)\bin\julia.exe -e "include(joinpath(\".dev\", \"systemimage\", \"climate_machine_image.jl\"))"
     displayName: 'Build System Image'
