--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -49,6 +49,7 @@ gpu = [
   { file = "test/Numerics/DGmethods/advection_diffusion/periodic_3D_hyperdiffusion.jl", slurmargs = ["--ntasks=3"], args = ["--integration-testing"] },
   { file = "tutorials/Atmos/dry_rayleigh_benard.jl", slurmargs = ["--ntasks=1", "--time=01:30:00"], args = [] },
   { file = "tutorials/Atmos/risingbubble.jl", slurmargs = ["--ntasks=3"], args = [] },
+  { file = "tutorials/Atmos/densitycurrent.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "experiments/AtmosGCM/heldsuarez.jl", slurmargs = ["--ntasks=1", "--time=01:30:00"], args = ["--diagnostics=default"] },
   { file = "experiments/AtmosLES/surfacebubble.jl", slurmargs = ["--ntasks=3", "--time=01:30:00"], args = [] },
   { file = "experiments/AtmosLES/dycoms.jl", slurmargs = ["--ntasks=3"], args = [] },
