--- a/Project.toml
+++ b/Project.toml
@@ -40,6 +40,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 
 [compat]
+Adapt = "1.0"
 ArgParse = "1.1"
 CLIMAParameters = "0.1"
 CUDAapi = "3.1, 4.0"
@@ -65,7 +66,7 @@ RootSolvers = "0.1, 0.2"
 SpecialFunctions = "0.10"
 StaticArrays = "0.12"
 WriteVTK = "1.4"
-julia = ">= 1.3"
+julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
