fix format, add formatter to bors

--- a/.github/workflows/JuliaFormatter.yml
+++ b/.github/workflows/JuliaFormatter.yml
@@ -1,6 +1,13 @@
 name: JuliaFormatter
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - master
+      - trying
+      - staging
+    tags: '*'
+  pull_request:
 
 jobs:
   format:
