--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -66,6 +67,7 @@ Literate = "2.2"
 MPI = "0.12, 0.13, 0.14"
 NCDatasets = "0.10"
 OrderedCollections = "1.1"
+OrdinaryDiffEq = "5.41.0"
 RootSolvers = "0.1, 0.2"
 SpecialFunctions = "0.10"
 StaticArrays = "0.12"
