--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -14,6 +14,8 @@ cpu = [
   { file = "test/Numerics/Mesh/mpi_getpartition.jl", slurmargs = ["--ntasks=5"], args = [] },
   { file = "test/Numerics/Mesh/mpi_sortcolumns.jl", slurmargs = ["--ntasks=4"], args = [] },
   { file = "test/Numerics/ODESolvers/ode_tests_convergence.jl", slurmargs = ["--ntasks=1"], args = [] },
+  { file = "test/Land/Model/haverkamp_test.jl", slurmargs = ["--ntasks=1"], args = [] },
+  { file = "test/Land/Model/test_bc.jl", slurmargs = ["--ntasks=1"], args = [] },
 ]
 
 cpu_gpu = [
