Add soil water balance law
Reintegrating Haverkamp example into new framework

added missing functions

forgot this in last commit

merged KD and AGL work

continued work on balance law+driver, added haverkamp test

 files in src now agree with PR of initial LandFramework

updated test files and .yml file to reflect PR 1297 changes after code review

made BC available via dispatch, made it so they and the IC could be functions of time (or space for the IC)

changed nu to vartheta; created new .md in docs to match PR1279

added documentation

added ice as a state variable with not RHS terms

updated .md to reflect other exports

made BC more general, added prescribed T and moisture models, get T/moisture functions

made it so that we can run with both prescribed models as a balance law

formatted, added comments

added hydrostatic equilibrium sanity check to tutorials

formatted the test scripts; commented out haverkamp_test.jl due to Inteprolations.jl

addressed issue with callbacks and first_order_flux

addressed issue with callbacks and first_order_flux(2)

editing documentation

documentation (2)

documentation (3)

propagating renaming of bc_functions to AbstractBoundaryFunctions

made notation consisten for vartheta, and changed kappa to K for hydraulic cond

made notation consisten for vartheta, and changed kappa to K for hydraulic cond/didnt commit all changes

switched from Interpolations.jl to Dierckx.jl

checking to see if uninitialized nabla(h) led to errors in test_bc.jl

moved soil params to soil model, renamed soil param functions. defined generic bc and balance law functions that do nothing

reverted to default of theta_ice =0, added comments into doc as to why

added testset blocks

updated all to reflect changes to variables

created AbstractSoilComponentModel to alleviate error using more general BalanceLaw

moved some tests to slurm-ci; made Land its own test module

enabling GPU

added initialization

removed duplicate docstrings

--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -47,6 +47,9 @@ cpu_gpu = [
   { file = "test/Atmos/Parameterizations/Microphysics/KM_saturation_adjustment.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/Atmos/Parameterizations/Microphysics/KM_warm_rain.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "test/Atmos/Parameterizations/Microphysics/KM_ice.jl", slurmargs = ["--ntasks=3"], args = [] },
+  { file = "test/Land/Model/haverkamp_test.jl", slurmargs = ["--ntasks=1'"], args = [] },
+  { file = "test/Land/Model/test_bc.jl", slurmargs = ["--ntasks=1'"], args = [] },
+
 ]
 
 gpu = [
