cache artifacts in GitHub Actions

--- a/.github/workflows/Documenter.yaml
+++ b/.github/workflows/Documenter.yaml
@@ -25,6 +25,20 @@ jobs:
       - uses: julia-actions/setup-julia@v1.1.6
         with:
           version: 1.4
+
+      # https://discourse.julialang.org/t/recommendation-cache-julia-artifacts-in-ci-services/35484
+      - name: Cache artifacts
+        uses: actions/cache@v1
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts 
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
+
       - name: Install Julia dependencies
         env:
           JULIA_PROJECT: "docs/"
