--- a/Project.toml
+++ b/Project.toml
@@ -67,7 +67,7 @@ RootSolvers = "0.1, 0.2"
 SpecialFunctions = "0.10"
 StaticArrays = "0.12"
 StaticNumbers = "0.3.2"
-WriteVTK = "= 1.6.0"
+WriteVTK = "1.7"
 julia = "1.3"
 
 [extras]
