DiagnosticsMachine and StdDiagnostics
Adds a new framework for specifying diagnostic variables of various types,
diagnostics groups composed of arbitrary diagnostic variables, as well as
some standard diagnostics variables and groups that use this framework.

Adds StdDiagnostics groups to experiment runs for integration testing.

Adjusts test matrix to reduce CI runtime.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1531,7 +1531,7 @@ steps:
   - label: "gpu_heldsuarez"
     key: "gpu_heldsuarez"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosGCM/heldsuarez.jl --fix-rng-seed "
+      - "mpiexec julia --color=yes --project experiments/AtmosGCM/heldsuarez.jl --diagnostics=default --fix-rng-seed "
     agents:
       config: gpu
       queue: central
